feat(invites): serve full salon invite history with derived statuses
Replace GET /salons/{salonId}/invites/pending with GET /salons/{salonId}/invites,
returning the salon's whole invite history newest-first instead of only live
pending rows.

Cancel and accept both wrote is_used = true, so ACCEPTED and CANCELLED were
indistinguishable in the schema. V153 adds revoked_at/revoked_reason as the one
bit time cannot tell you; PENDING/EXPIRED stay derived from expires_at + clock,
so no cleanup job is needed. The derivation ladder checks CANCELLED before
ACCEPTED -- that order is load-bearing.

Expired invites were also hard-deleted on re-invite to free the partial unique
index slot, destroying history. They are now marked SUPERSEDED and retained, with
ux_invite_tokens_active re-scoped to (is_used = false AND revoked_at IS NULL).
Both columns are added in the same migration, so the rebuilt index selects exactly
V101's row set and cannot fail on historical duplicates.

Also:
- narrow the (email, salon) finder to ...AndRevokedAtIsNull; retained superseded
  rows would otherwise make its Optional throw IncorrectResultSizeDataAccessException
  on every second re-invite
- unify the expiry predicate on !expiresAt.isAfter(now) across six call sites; the
  recycle filter's isBefore left a window where a token was un-acceptable but not
  recyclable, swallowing the re-invite as an idempotent 201 with no email sent
- reject revoked tokens in previewInvite and acceptInvite
- refuse to cancel any non-pending invite, so the audit trail cannot be rewritten
- report truncation via {invites, truncated} rather than silently capping at 200
- project the history query instead of loading entities, keeping the token hash
  off the read path
- map 405/406/404 explicitly; @ExceptionHandler(Exception.class) shadowed the
  framework's 405 into a 500 with a stack trace on an unauthenticated path

Repairs two pre-existing broken test contexts (SalonServiceCacheTest,
CachePrefixEvictionKeyShapeTest) w